# PAI2

./: .gitignore  CMakeLists.txt  README  TODO.txt  callgrind.sh  valgrind.sh  valgrind.txt
src/: Loc.h  ab_utility.cpp  ab_utility.h  alpha_beta.cpp  alpha_beta.h  bdebug.h  board_reps.cpp  board_reps.h  board_strip.h  candidate_cache.h  cap_table.h  defines.h  game_loader.cpp  game_loader.h  iab_bridge.h  length_lookup.cpp  length_lookup.h  length_lookup_table.cpp  length_lookup_table.h  line_lookup_table.cpp  line_lookup_table.h  line_pattern.cpp  line_pattern.h  loc.cpp  move.h  move_history.cpp  move_history.h  move_suggester.cpp  move_suggester.h  move_suggestor.cpp  move_suggestor.h  pente_game.cpp  pente_game.h  position_stats.cpp  position_stats.h  priority_level.cpp  priority_level.h  priority_level2.cpp.bak2  priority_level2.h.bak2  run_ai.cpp  (+10 more)
test/: .ExampleTest.cpp.swp  .alpha_beta_test.cpp.swp  LocTest.cpp  ab_utility_test.cpp  ai_subsystem_test.cpp  alpha_beta_test.cpp  board_reps_test.cpp  board_strip_test.cpp  candidate_cache_test.cpp  cap_table_test.cpp  game_loader_test.cpp  length_lookup_table_test.cpp  length_lookup_test.cpp  line_lookup_table_test.cpp  loc_test.cpp  move_history_test.cpp  move_suggester_test.cpp  move_suggestor_test.cpp  move_test.cpp  pente_game_test.cpp  position_stats_test.cpp  priority_level_test.cpp  run_ai_support_test.cpp  span_lookup_table.cpp  span_lookup_table_test.cpp  special_occs_table_test.cpp  structure_test.cpp  transposition_table_test.cpp  utility_calc_test.cpp
